# go-nearprotocol

./: Cargo.toml  Makefile  README.md  go.mod  lib.go
api/: bindings.h  lib.go  libgo_nearprotocol.dylib  link_std.go
cmd/: main.go
example-contract/src/: lib.rs
src/: lib.rs  standalone.rs
