[package]
name = "go-nearprotocol"
version = "0.1.0"
authors = ["shiki.takahashi <shiki.takahashi@linecorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["backtraces"]
backtraces = ["snafu/backtraces"]

[dependencies]
libc = "0.2.2"
snafu = "0.6.3"

[build-dependencies]
cbindgen = { version = "0.14" }