[package]
name = "go-nearprotocol"
version = "0.1.0"
authors = ["shiki.takahashi <shiki.takahashi@linecorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["backtraces"]
backtraces = ["snafu/backtraces"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2.2"
snafu = "0.6.3"
clap = "2.33.0"
base64 = "0.11"
strum = "0.18"
num-rational = { clap = "0.2.4" }

near-vm-logic = "2.2.0"
near-vm-runner = "2.2.0"
near-runtime-fees = "2.2.0"

[build-dependencies]
cbindgen = { version = "0.14" }